--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/DisasterPrep_WebBuild.loader.js";
       var config = {
-        //dataUrl: "https://media.githubusercontent.com/media/sohyb-qasem/DisasterPrepTest/master/Build/DisasterPrep_WebBuild.data",
-        dataUrl: buildUrl + "/DisasterPrep_WebBuild.data",
+        dataUrl: "https://media.githubusercontent.com/media/sohyb-qasem/DisasterPrepTest/master/Build/DisasterPrep_WebBuild.data",
+        //dataUrl: buildUrl + "/DisasterPrep_WebBuild.data",
         frameworkUrl: buildUrl + "/DisasterPrep_WebBuild.framework.js",
         codeUrl: buildUrl + "/DisasterPrep_WebBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
